--- a/catalog.html.html
+++ b/catalog.html.html
@@ -6,19 +6,18 @@
   </head>
   <body>
 <header>
-  <h1>Техномарт</h1>
     <form>
       <input type="Поиск" placeholder="">
     </form>
 <ul>
-  <button type="button">закладки</button>
-  <button type="button">Корзина</button>
-  <button type="button">Оформить заказ</button>
+  <li><a href="bookmarks.html">закладки</a></li>
+  <li><a href="basket.html">Корзина</a></li>
+  <li><a href="order.html">Оформить заказ</a></li>
 </ul>
 </header>
   <main>
     <section>
-     <h2>Окно регистрации</h2>
+     <h1>Техномарт</h1>
      <p>
       Интернет-магазин<br>
       строительных материалов<br>
@@ -34,63 +33,33 @@
        </p>
         </ul>
      </div>
-      <button type="button">Войти</button>
-      <button type="button">Регистрация</button>
-    </section>
-    <section>
-      <nav>
-        <h2>Навигация</h2>
-        <ul>
-          <li><a href="index.html">Главная</a></li>
-          <li><a href="comments.html">Компания</a></li>
-          <li><a href="catalog.html">Каталог</a></li>
-          <li><a href="news.html">Новости</a></li>
-          <li><a href="specification.html">Спецпредложения</a></li>
-          <li><a href="delivery.html">Доставка</a></li>
-        </ul>
-      </nav>
-    </section>
-    <section>
-      <ul>
-      <h2>Компания "Техномарт"</h2>
-      <p>
-        Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и<br>
-        строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.
-      </p>
-      <p>
-        Мы можем доставить ваш товар в самые отдаленные точки России!<br>
-        Техномарт работает со многими транспортными компаниями:
-      </p>
-      </ul>
-      <ul>
-        <li>Деловые линии</li>
-        <li>Автотрейдинг</li>
-        <li>ЖелДорЭкспедиция</li>
-      </ul>
-      <button type="button">Подробнее о компании</button>
-    </section>
-    <section>
-      <h2>Контакты</h2>
-      <div>
-      <p>
-        Вы можете забрать товар сами,<br>
-        заехав в наш офис:
-      </p>
-        <map></map>
-        <button type="submit">Заблюдились? Напишите нам!</button>
-      </div>
+      <fieldset>
+        <label>Имя<input type="" required></label>
+      </fieldset>
+      <a href="">Мои заказы</a>
+      <a href="">Личный кабинет</a>
     </section>
   </main>
   <footer>
+    <section>
+      <h2>Пара слов о перфораторах</h2>
+      <p>
+        Перфоратор-универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.<br>
+        Существует электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка.В<br>
+        ассортиментном ряду есть выбор "трехрежимников": в одном устройстве будут совмещены отбойный молоток и ударная дрель.
+      </p>
+    </section>
 <section>
   <h3>Контакты</h3>
-  <div>
+  <ul>
+    <p>
       <a href="">Техномарт</a>
+    </p>
     <p>
       г.Санкт-Петербург, ул.Б.Конюшенная,д. 19/8<br>
       +7(812)555-05-55
     </p>
-  </div>
+  </ul>
 </section>
     <section>
       <ul>
