--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       <input type="Поиск" placeholder="">
     </form>
 <ul>
-  <button type="button">закладки</button>
-  <button type="button">Корзина</button>
-  <button type="button">Оформить заказ</button>
+  <li><a href="">Закладки</a></li>
+  <li><a href="">Корзина</a></li>
+  <li><a href="">Оформить заказ</a></li>
 </ul>
 </header>
   <main>
@@ -94,7 +94,7 @@
 </section>
     <section>
       <ul>
-        <h3>Навигация</h3>
+        <h2>Навигация</h2>
         <li><a href="">Компания</a></li>
         <li><a href="News.html">Новости</a></li>
         <li><a href="Catalog.html">Каталог</a></li>
@@ -109,7 +109,7 @@
       </ul>
     </section>
     <section>
-        <h3>Обратная связь</h3>
+        <h2>Обратная связь</h2>
         <p>
           2010-2019 Компания "Техномарт"<br>
           Все права защищены
