--- a/catalog.html.html
+++ b/catalog.html.html
@@ -9,11 +9,13 @@
     <form>
       <input type="Поиск" placeholder="">
     </form>
+  <nav>
 <ul>
   <li><a href="bookmarks.html">закладки</a></li>
   <li><a href="basket.html">Корзина</a></li>
   <li><a href="order.html">Оформить заказ</a></li>
 </ul>
+  </nav>
 </header>
   <main>
     <section>
