--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" xmlns="http://www.w3.org/1999/html">
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Техномарт</title>
@@ -49,6 +49,187 @@
           <li><a href="delivery.html">Доставка</a></li>
         </ul>
       </nav>
+    </section>
+    <section>
+      <h3>Каталог</h3>
+      <ul>
+      <li>
+        <img src="" alt="Дрели соседям на радость!" width="350" height="250">
+        <button type="button">Открыть каталог</button>
+      </li>
+      <li>
+        <img src="" alt="материалы" width="" height="">
+        <button type="button">На любой вкус</button>
+      </li>
+      <li>
+        <img src="" alt="инструмент" width="" height="">
+        <button type="button">На все случаи</button>
+      </li>
+      <li>
+        <img src="" alt="техника" width="" height="">
+        <button type="button">для стройки</button>
+      </li>
+      <li>
+        <img src="" alt="списки 50%" width="" height="">
+        <button type="button">На 350 товаров</button>
+      </li>
+      <li>
+        <img src="" alt="доставка" width="" height="">
+        <button type="button">бесплатно</button>
+      </li>
+      </ul>
+    </section>
+    <section>
+      <h2>Популярные товары</h2>
+      <ul>
+        <li>
+          <p>
+            Популярные товары:
+          </p>
+        </li>
+        <button type="button">Все популярные товары</button>
+      </ul>
+      <h3>Список перфораторов</h3>
+      <ul>
+        <li>
+          <h3>bosch bfg 9000</h3>
+          <img src=""alt="Перфоратор bosch bfg 9000">
+            <a href="catalog-item.html">
+              <p>
+                Перфоратор BOSCH<br>
+                BFG 9000
+              </p>
+            </a>
+              <p>
+                <b><s>32500 P.</s></b>
+              </p>
+               <p>
+                <a href="">25500 P.</a>
+              </p>
+        </li>
+        <li>
+          <h3>bosch bfg 3000</h3>
+          <img src=""alt="Перфоратор bosch bfg 3000">
+          <a href="catalog-item.html">
+            <p>
+              Перфоратор BOSCH<br>
+              BFG 3000
+            </p>
+          </a>
+          <p>
+            <b><s>22500 P.</s></b>
+          </p>
+          <p>
+            <a href="">15500 P.</a>
+          </p>
+        </li>
+        <li>
+          <h3>bosch bfg 6000</h3>
+          <img src=""alt="Перфоратор bosch bfg 6000">
+          <a href="catalog-item.html">
+            <p>
+              Перфоратор BOSCH<br>
+              BFG 6000
+            </p>
+          </a>
+          <p>
+            <b><s>30500 P.</s></b>
+          </p>
+          <p>
+            <a href="">25500 P.</a>
+          </p>
+        </li>
+        <li>
+          <h3>bosch bfg 2000 "NEW"</h3>
+          <img src=""alt="Перфоратор bosch bfg 2000">
+          <a href="catalog-item.html">
+            <p>
+              Перфоратор BOSCH<br>
+              BFG 2000
+            </p>
+          </a>
+          <p>
+            <a href="">12500 P.</a>
+          </p>
+        </li>
+      </ul>
+    </section>
+    <section>
+      <h2>Популярные производители</h2>
+      <ul>
+        <li>
+          <p>
+            Популярные производители:
+          </p>
+        </li>
+        <button type="button">Все производители</button>
+      </ul>
+      <h3>Список производителей</h3>
+      <ul>
+        <li>
+          <a href="">
+            <img src="" alt="BOSCH">
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <img src="" alt="Makita">
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <img src="" alt="DeWALT">
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <img src="" alt="Интрескол">
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <img src="" alt="HITACHI">
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <img src="" alt="LG">
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <img src="" alt="AEG">
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <img src="" alt="Metabo">
+          </a>
+        </li>
+      </ul>
+    </section>
+    <section>
+      <h2>Сервисы</h2>
+      <ul>
+        <li>
+          <p>
+            Хороший интернет-магазин отличается от плохого не только ценами!<br>
+            Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.
+          </p>
+        </li>
+      </ul>
+      <h2>Доставка</h2>
+      <ul>
+        <li>
+          <p>
+            Мы с удовольствием доставим ваш товар прямо<br>
+            к вашему подъезду совершенно бесплатно!<br>
+            Ведь мы неплохо заработаем,<br>
+            поднимая его на ваш этаж!
+          </p>
+        </li>
+      </ul>
+      <img src=""alt="машинка">
     </section>
     <section>
       <ul>
