--- a/catalog.html.html
+++ b/catalog.html.html
@@ -10,6 +10,7 @@
       <input type="Поиск" placeholder="">
     </form>
   <nav>
+    <h1><a href="index.html">Техномарт</a></h1>
 <ul>
   <li><a href="bookmarks.html">закладки</a></li>
   <li><a href="basket.html">Корзина</a></li>
@@ -19,7 +20,7 @@
 </header>
   <main>
     <section>
-     <h1>Техномарт</h1>
+     <h2>Техномарт</h2>
      <p>
       Интернет-магазин<br>
       строительных материалов<br>
@@ -40,6 +41,189 @@
       </fieldset>
       <a href="">Мои заказы</a>
       <a href="">Личный кабинет</a>
+    </section>
+    <section>
+      <h2>маршрут</h2>
+      <ui>
+        <li><img src="" alt="домик"><img src="" alt=">">Каталог<img src="" alt=">">инструмент<img src="" alt=">">перфораторы</li>
+      </ui>
+      <h2>Перфораторы</h2>
+    </section>
+    <section>
+      <H3>Фильтр</H3>
+      <input type="range" min="0" max="100" step="1" value="75">
+    </section>
+    <section>
+      <h2>Перфораторы каратог</h2>
+      <ul>
+        <li>
+          <h3>bosch bfg 3000</h3>
+          <img src=""alt="Перфоратор bosch bfg 3000">
+          <a href="catalog-item.html">
+            <p>
+              Перфоратор BOSCH<br>
+              BFG 3000
+            </p>
+          </a>
+          <p>
+            <b><s>22500 P.</s></b>
+          </p>
+          <p>
+            <a href="">15500 P.</a>
+          </p>
+        </li>
+        <li>
+          <h3>bosch bfg 3000</h3>
+          <img src=""alt="Перфоратор bosch bfg 3000">
+          <a href="catalog-item.html">
+            <p>
+              Перфоратор BOSCH<br>
+              BFG 3000
+            </p>
+          </a>
+          <p>
+            <b><s>22500 P.</s></b>
+          </p>
+          <p>
+            <a href="">15500 P.</a>
+          </p>
+        </li>
+        <li>
+          <h3>bosch bfg 3000</h3>
+          <img src=""alt="Перфоратор bosch bfg 3000 NEW">
+          <a href="catalog-item.html">
+            <p>
+              Перфоратор BOSCH<br>
+              BFG 3000
+            </p>
+          </a>
+          <p>
+            <b><s>22500 P.</s></b>
+          </p>
+          <p>
+            <a href="">15500 P.</a>
+          </p>
+        </li>
+        <li>
+          <h3>bosch bfg 6000</h3>
+          <img src=""alt="Перфоратор bosch bfg 6000">
+          <a href="catalog-item.html">
+            <p>
+              Перфоратор BOSCH<br>
+              BFG 6000
+            </p>
+          </a>
+          <p>
+            <b><s>30500 P.</s></b>
+          </p>
+          <p>
+            <a href="">25500 P.</a>
+          </p>
+        </li>
+        <li>
+          <h3>bosch bfg 6000</h3>
+          <img src=""alt="Перфоратор bosch bfg 6000 NEW">
+          <a href="catalog-item.html">
+            <p>
+              Перфоратор BOSCH<br>
+              BFG 6000
+            </p>
+          </a>
+          <p>
+            <b><s>30500 P.</s></b>
+          </p>
+          <p>
+            <a href="">25500 P.</a>
+          </p>
+        </li>
+        <li>
+          <h3>bosch bfg 6000</h3>
+          <img src=""alt="Перфоратор bosch bfg 6000">
+          <a href="catalog-item.html">
+            <p>
+              Перфоратор BOSCH<br>
+              BFG 6000
+            </p>
+          </a>
+          <p>
+            <b><s>30500 P.</s></b>
+          </p>
+          <p>
+            <a href="">25500 P.</a>
+          </p>
+        </li>
+        <li>
+          <a href="">
+            <button>купить</button>
+          </a>
+          <a href="">
+            <button>в закладки</button>
+          </a>
+          <h3>bosch bfg 2000 NEW</h3>
+          <a href="catalog-item.html">
+            <p>
+              Перфоратор BOSCH<br>
+              BFG 2000
+            </p>
+          </a>
+          <p>
+            <a href="">12500 P.</a>
+          </p>
+        </li>
+        <li>
+          <h3>bosch bfg 2000</h3>
+          <img src=""alt="Перфоратор bosch bfg 2000">
+          <a href="catalog-item.html">
+            <p>
+              Перфоратор BOSCH<br>
+              BFG 2000
+            </p>
+          </a>
+          <p>
+            <a href="">12500 P.</a>
+          </p>
+        </li>
+        <li>
+          <h3>bosch bfg 2000</h3>
+          <img src=""alt="Перфоратор bosch bfg 2000">
+          <a href="catalog-item.html">
+            <p>
+              Перфоратор BOSCH<br>
+              BFG 2000
+            </p>
+          </a>
+          <p>
+            <a href="">12500 P.</a>
+          </p>
+        </li>
+      </ul>
+    </section>
+    <section>
+      <h3>навигация страниц</h3>
+      <ul>
+        <li>
+          <a href="page2.htm">1</a>
+          <a href="page2.htm">2</a>
+          <a href="page2.htm">3</a>
+          <a href="page2.htm">Следущая</a>
+        </li>
+      </ul>
+    </section>
+      <section>
+      <form action="catalog.html">
+        <h3>Производители</h3>
+        <p><input type="checkbox" name="a" value="BOSCH">BOSCH</p>
+        <p><input type="checkbox" name="a" value="Интеркол">Интеркол</p>
+        <p><input type="checkbox" name="a" value="MAKITA">MAKITA</p>
+        <p><input type="checkbox" name="a" value="DEWALT">DEWALT</p>
+        <p><input type="checkbox" name="a" value="HITACHI">HITACHI</p>
+      </form>
+        <form action="catalog.html">
+          <h3>Питание</h3>
+          <p><input type="radio" name="d" value="akum">Аккумуляторные</p>
+          <p><input type="radio" name="d" value="set">Сетевые</p>
+        </form>
+        <button type="button">Показать</button>
     </section>
   </main>
   <footer>
@@ -104,5 +288,16 @@
       </div>
     </section>
   </footer>
+  <section>
+    <h2 class="visually-hidden">Оформление заказа</h2>
+    <ul>
+    <img src="img/html.ru">
+    <p>
+      Товар добавлен в корзину!
+    </p>
+    </ul>
+    <button type="button">Оформить заказ</button>
+    <button type="button">Продолжить покупки</button>
+  </section>
   </body>
 </html>
