--- a/catalog.html.html
+++ b/catalog.html.html
@@ -10,7 +10,7 @@
       <input type="Поиск" placeholder="">
     </form>
   <nav>
-    <h1><a href="index.html">Техномарт</a></h1>
+    <p>Техномарт</p>>
 <ul>
   <li><a href="bookmarks.html">закладки</a></li>
   <li><a href="basket.html">Корзина</a></li>
@@ -20,7 +20,7 @@
 </header>
   <main>
     <section>
-     <h2>Техномарт</h2>
+     <h1>Техномарт</h1>
      <p>
       Интернет-магазин<br>
       строительных материалов<br>
@@ -28,7 +28,7 @@
      </p>
       <div>
         <ul>
-        <a href="">
+        <a href="#">
          <img src="hot-line.html" alt="горячая линия">
         </a>
         <p>
@@ -39,11 +39,11 @@
       <fieldset>
         <label>Имя<input type="" required></label>
       </fieldset>
-      <a href="">Мои заказы</a>
-      <a href="">Личный кабинет</a>
+      <a href="#">Мои заказы</a>
+      <a href="#">Личный кабинет</a>
     </section>
     <section>
-      <h2>маршрут</h2>
+      <h3>маршрут</h3>
       <ui>
         <li><img src="" alt="домик"><img src="" alt=">">Каталог<img src="" alt=">">инструмент<img src="" alt=">">перфораторы</li>
       </ui>
