--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div>
         <ul>
         <a href="#">
-         <img src="img/+7 (812)%20555-05-55.png" alt="горячая линия">
+         <img src="img/+7 (812)%20555-05-55.png" width="270" height="45" alt="горячая линия">
         </a>
         <p>
         г.Санкт-Петербург, ул.Б.Конюшенная, д. 19/8
@@ -59,8 +59,10 @@
         <img src="img/Layer 99.jpg" alt="Дрели соседям на радость!" >
         <button type="button">Открыть каталог</button>
       </li>
-      <li>
-        <img src="" alt="материалы" width="" height="">
+        <li>
+          <img src="img/btn.jpg" height="38" width="135" alt="картинка">
+          <img src="img/new flag.jpg" width="60" height="59" alt="новинка">
+        <img src="img/Layer 100.jpg" alt="материалы" width="300" height="123">
         <button type="button">На любой вкус</button>
       </li>
       <li>
@@ -259,7 +261,7 @@
         Вы можете забрать товар сами,<br>
         заехав в наш офис:
       </p>
-        <img src="img/map.jpg">
+        <img src="img/map.jpg"alt="карта" height="548" width="786">
         <button type="submit">Заблюдились? Напишите нам!</button>
       </div>
     </section>
