--- a/catalog.html.html
+++ b/catalog.html.html
@@ -202,26 +202,51 @@
       <h3>навигация страниц</h3>
       <ul>
         <li>
-          <a href="page2.htm">1</a>
+          <a  href="page2.htm">1</a>
           <a href="page2.htm">2</a>
           <a href="page2.htm">3</a>
-          <a href="page2.htm">Следущая</a>
+          <a href="page2.htm">Следующая</a>
         </li>
       </ul>
     </section>
       <section>
       <form action="catalog.html">
         <h3>Производители</h3>
-        <p><input type="checkbox" name="a" value="BOSCH">BOSCH</p>
-        <p><input type="checkbox" name="a" value="Интеркол">Интеркол</p>
-        <p><input type="checkbox" name="a" value="MAKITA">MAKITA</p>
-        <p><input type="checkbox" name="a" value="DEWALT">DEWALT</p>
-        <p><input type="checkbox" name="a" value="HITACHI">HITACHI</p>
+        <ul>
+        <li>
+          <input type="checkbox" name="BOSCH" id="BOSCH"checked>
+          <label for="BOSCH">BOSCH</label>
+        </li>
+        <li>
+          <input type="checkbox" name="a" id="Интеркол">
+          <label for="Интеркол">Интеркол</label>
+        </li>
+        <li>
+          <input type="checkbox" name="MAKITA" id="MAKITA" checked>
+          <label for="MAKITA">MAKITA</label>
+        </li>
+        <li>
+          <input type="checkbox" name="DEWALT" id="DEWALT">
+          <label for="DEWALT">DEWALT</label>
+        </li>
+        <li>
+          <input type="checkbox" name="HITACHI" id="HITACHI">
+          <label for="HITACHI">HITACHI</label>
+        </li>
+        </ul>
       </form>
         <form action="catalog.html">
           <h3>Питание</h3>
-          <p><input type="radio" name="d" value="akum">Аккумуляторные</p>
-          <p><input type="radio" name="d" value="set">Сетевые</p>
+          <ul>
+          <li>
+            <input type="radio" name="Аккумуляторные" id="Аккумуляторные" checked>
+            <label for="Аккумуляторные">Аккумуляторные</label>
+          </li>
+          <li>
+            <input type="radio" name="Сетевые" id="Сетевые">
+            <label for="Сетевые">Сетевые</label>
+          </li>
+          </ul>
         </form>
         <button type="button">Показать</button>
     </section>
@@ -239,7 +264,7 @@
   <h2>Контакты</h2>
   <ul>
     <p>
-      <a href="">Техномарт</a>
+      <a href="#">Техномарт</a>
     </p>
     <p>
       г.Санкт-Петербург, ул.Б.Конюшенная,д. 19/8<br>
@@ -270,15 +295,15 @@
           Все права защищены
         </p>
       <ul>
-        <li><a href="">Вконтакте</a></li>
-        <li><a href="">Фейсбук</a></li>
-        <li><a href="">Инстаграм</a></li>
+        <li><a href="#">Вконтакте</a></li>
+        <li><a href="#">Фейсбук</a></li>
+        <li><a href="#">Инстаграм</a></li>
       </ul>
       <div>
       <p>
         Обратная связь:
       </p>
-      <a href="">mail@htmlacademy.ru</a>
+      <a href="#">mail@htmlacademy.ru</a>
       </div>
       <div>
         <p>
