--- a/index.html
+++ b/index.html
@@ -1,47 +1,57 @@
 <!DOCTYPE html>
 <html lang="ru" xmlns="http://www.w3.org/1999/html">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Техномарт</title>
-  </head>
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Техномарт</title>
+  <link href="https://fonts.googleapis.com/css?family=Cuprum|PT+Sans&display=swap" rel="stylesheet">
+  <link href="css/normalize.css" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
+</head>
   <body>
-<header>
-  <h1>Техномарт</h1>
-  <div class="search-box">
-    <form action="#">
-      <input type="text" placeholder="Поиск.." name="search">
-    </form>
-  </div>
-<ul>
-  <li><a href="#">Закладки</a></li>
-  <li><a href="#">Корзина</a></li>
-  <li><a href="#">Оформить заказ</a></li>
-</ul>
-</header>
-  <main>
+  <header class="main-header">
+    <h1 class="visually-hidden">Техномарт</h1>
+    <section class="section1">
+      <ul>
+        <li>
+          <div class="logo">
+          <p>Техномарт</p>
+          </div>
+        </li>
+        <li>
+          <form action="#">
+            <input type="text" placeholder="Поиск.." name="search">
+          </form>
+        </li>
+        <li><a href="#">Закладки</a></li>
+        <li><a href="#">Корзина</a></li>
+        <li><a href="#">Оформить заказ</a></li>
+      </ul>
+    </section>
     <section>
-     <h2>Окно регистрации</h2>
-     <p>
-      Интернет-магазин<br>
-      строительных материалов<br>
-      и инструментов для дома
-     </p>
-      <div>
-        <ul>
-        <a href="#">
-         <img src="img/+7 (812)%20555-05-55.png" width="270" height="45" alt="горячая линия">
-        </a>
-        <p>
-        г.Санкт-Петербург, ул.Б.Конюшенная, д. 19/8
-       </p>
-        </ul>
-     </div>
-      <button type="button">Войти</button>
-      <button type="button">Регистрация</button>
+      <h2 class="visually-hidden">Окно регистрации</h2>
+      <p>
+        Интернет-магазин<br>
+        строительных материалов<br>
+        и инструментов для дома
+      </p>
+      <ul>
+        <li>
+          <a href="#">
+            <img src="img/+7 (812)%20555-05-55.png" width="270" height="45" alt="горячая линия">
+          </a>
+        </li>
+        <li>
+          г.Санкт-Петербург, ул.Б.Конюшенная, д. 19/8
+        </li>
+        <li>
+          <a href="#">Войти</a>
+          <a href="#">Регистрация</a>
+        </li>
+      </ul>
     </section>
     <section>
       <nav>
-        <h2>Навигация</h2>
+        <h2 class="visually-hidden">Навигация</h2>
         <ul>
           <li><a href="index.html">Главная</a></li>
           <li><a href="comments.html">Компания</a></li>
@@ -52,39 +62,45 @@
         </ul>
       </nav>
     </section>
+  </header>
+  <main class="main">
     <section>
       <h3>Каталог</h3>
       <ul>
       <li>
         <img src="img/Layer 99.jpg" alt="Дрели соседям на радость!" >
-        <button type="button">Открыть каталог</button>
+        <a type="button" href="catalog.html.">Открыть каталог</a>
       </li>
-        <li>
-          <img src="img/btn.jpg" height="38" width="135" alt="картинка">
-          <img src="img/new flag.jpg" width="60" height="59" alt="новинка">
-        <img src="img/Layer 100.jpg" alt="материалы" width="300" height="123">
-        <button type="button">На любой вкус</button>
-      </li>
-      <li>
-        <img src="" alt="инструмент" width="" height="">
-        <button type="button">На все случаи</button>
+        <li class="fig1">
+          <div>New</div>
+          <p>Материалы</p>
+          <a href="#">на любой вкус</a>
+          <img class="img-icon"  src="img/icon-1.png">
       </li>
       <li>
-        <img src="" alt="техника" width="" height="">
-        <button type="button">для стройки</button>
+        <p>Инструмент</p>
+        <img src="img/Layer 1 copy 5.png" alt="инструмент" width="300" height="123">
+        <a href="#">На все случаи</a>
       </li>
       <li>
-        <img src="" alt="списки 50%" width="" height="">
-        <button type="button">На 350 товаров</button>
+        <p>Техника</p>
+        <a href="#">для стройки</a>
+        <img src="img/Layer 1 copy 12.png" alt="техника" width="300" height="123">
       </li>
       <li>
-        <img src="" alt="доставка" width="" height="">
-        <button type="button">бесплатно</button>
+        <p>Скидки 50%</p>
+        <a href="#">На 350 товаров</a>
+        <img src="img/Layer 1 copy 14.png" alt="списки 50%" width="300" height="123">
+      </li>
+      <li>
+        <p>Доставка</p>
+        <img src="img/Layer 1 copy 15.png" alt="доставка" width="300" height="123">
+        <a href="#">бесплатно</a>
       </li>
       </ul>
     </section>
     <section>
-      <h2>Популярные товары</h2>
+      <h2 class="visually-hidden">Популярные товары</h2>
       <ul>
         <li>
           <p>
@@ -97,7 +113,7 @@
       <ul>
         <li>
           <h3>bosch bfg 9000</h3>
-          <img src=""alt="Перфоратор bosch bfg 9000">
+          <img src="img/perforator9000.jpg"alt="Перфоратор bosch bfg 9000">
             <a href="catalog-item.html">
               <p>
                 Перфоратор BOSCH<br>
@@ -108,12 +124,12 @@
                 <b><s>32500 P.</s></b>
               </p>
                <p>
-                <a href="">25500 P.</a>
+                <a href="#">25500 P.</a>
               </p>
         </li>
         <li>
           <h3>bosch bfg 3000</h3>
-          <img src=""alt="Перфоратор bosch bfg 3000">
+          <img src="img/perforator3000.jpg"alt="Перфоратор bosch bfg 3000">
           <a href="catalog-item.html">
             <p>
               Перфоратор BOSCH<br>
@@ -124,12 +140,12 @@
             <b><s>22500 P.</s></b>
           </p>
           <p>
-            <a href="">15500 P.</a>
+            <a href="#">15500 P.</a>
           </p>
         </li>
         <li>
           <h3>bosch bfg 6000</h3>
-          <img src=""alt="Перфоратор bosch bfg 6000">
+          <img src="perforator6000.jpg"alt="Перфоратор bosch bfg 6000">
           <a href="catalog-item.html">
             <p>
               Перфоратор BOSCH<br>
@@ -140,12 +156,12 @@
             <b><s>30500 P.</s></b>
           </p>
           <p>
-            <a href="">25500 P.</a>
+            <a href="#">25500 P.</a>
           </p>
         </li>
         <li>
           <h3>bosch bfg 2000 "NEW"</h3>
-          <img src=""alt="Перфоратор bosch bfg 2000">
+          <img src="img/perforator2000.jpg"alt="Перфоратор bosch bfg 2000">
           <a href="catalog-item.html">
             <p>
               Перфоратор BOSCH<br>
@@ -153,7 +169,7 @@
             </p>
           </a>
           <p>
-            <a href="">12500 P.</a>
+            <a href="#">12500 P.</a>
           </p>
         </li>
       </ul>
@@ -168,51 +184,53 @@
         </li>
         <button type="button">Все производители</button>
       </ul>
+      <div class="flex-container">
       <h3>Список производителей</h3>
       <ul>
-        <li>
+        <li class="column popular-brands-item">
           <a href="index.html">
             <img src="img/bosch1.jpg" width="126" height="37" alt="BOSCH">
           </a>
         </li>
-        <li>
-          <a href="">
+        <li class="popular-brands-item">
+          <a href="index.html">
             <img src="img/makita.jpg" alt="Makita">
           </a>
         </li>
-        <li>
-          <a href="">
+        <li class="popular-brands-item">
+          <a href="index.html">
             <img src="img/dewalt.jpg" alt="DeWALT">
           </a>
         </li>
-        <li>
-          <a href="">
-            <img src="" alt="Интрескол">
+        <li class="popular-brands-item">
+          <a href="index.html">
+            <img src="img/Интерскол.png" alt="Интрескол">
           </a>
         </li>
-        <li>
-          <a href="">
-            <img src="" alt="HITACHI">
+        <li class="popular-brands-item">
+          <a href="index.html">
+            <img src="img/Hitachi.png" alt="HITACHI">
           </a>
         </li>
-        <li>
-          <a href="">
-            <img src="" alt="LG">
+        <li class="popular-brands-item">
+          <a href="index.html">
+            <img src="img/Lg.png" alt="LG">
           </a>
         </li>
-        <li>
-          <a href="">
-            <img src="" alt="AEG">
+        <li class="popular-brands-item">
+          <a href="index.html">
+            <img src="img/AEG.png" alt="AEG">
           </a>
         </li>
-        <li>
-          <a href="">
-            <img src="" alt="Metabo">
+        <li class="popular-brands-item">
+          <a href="index.html">
+            <img src="img/Metabo.png" alt="Metabo">
           </a>
         </li>
       </ul>
+      </div>
     </section>
-    <section>
+    <section class="service-back">
       <h2>Сервисы</h2>
       <ul>
         <li>
@@ -233,7 +251,7 @@
           </p>
         </li>
       </ul>
-      <img src=""alt="машинка">
+      <img src="img/Layer 131.png"alt="машинка">
     </section>
     <section>
       <ul>
@@ -261,12 +279,13 @@
         Вы можете забрать товар сами,<br>
         заехав в наш офис:
       </p>
-        <img src="img/map.jpg"alt="карта" height="548" width="786">
+        <img  src="img/map.jpg"alt="карта" height="548" width="786">
         <button type="submit">Заблюдились? Напишите нам!</button>
       </div>
     </section>
+  </section>
   </main>
-  <footer>
+  <footer class="footer1">
 <section>
   <h3>Контакты</h3>
   <div>
