--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Техномарт</title>
-  <link href="https://fonts.googleapis.com/css?family=Cuprum|PT+Sans&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Cuprum&display=swap" rel="stylesheet">
   <link href="css/normalize.css" rel="stylesheet">
-  <link href="style.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 </head>
   <body>
-  <header class="main-header">
+  <header>
     <h1 class="visually-hidden">Техномарт</h1>
-    <section class="section1">
+    <section class="section-1">
       <ul>
         <li>
           <div class="logo">
@@ -27,6 +28,7 @@
         <li><a href="#">Оформить заказ</a></li>
       </ul>
     </section>
+    <div class="section-2">
     <section>
       <h2 class="visually-hidden">Окно регистрации</h2>
       <p>
@@ -49,7 +51,7 @@
         </li>
       </ul>
     </section>
-    <section>
+    <section class="section-3">
       <nav>
         <h2 class="visually-hidden">Навигация</h2>
         <ul>
@@ -62,8 +64,10 @@
         </ul>
       </nav>
     </section>
+    </div>
   </header>
-  <main class="main">
+  <main>
+    <div class="main">
     <section>
       <h3>Каталог</h3>
       <ul>
@@ -145,7 +149,7 @@
         </li>
         <li>
           <h3>bosch bfg 6000</h3>
-          <img src="perforator6000.jpg"alt="Перфоратор bosch bfg 6000">
+          <img src="img/perforator6000.jpg"alt="Перфоратор bosch bfg 6000">
           <a href="catalog-item.html">
             <p>
               Перфоратор BOSCH<br>
@@ -230,6 +234,7 @@
       </ul>
       </div>
     </section>
+    </div>
     <section class="service-back">
       <h2>Сервисы</h2>
       <ul>
@@ -279,13 +284,13 @@
         Вы можете забрать товар сами,<br>
         заехав в наш офис:
       </p>
-        <img  src="img/map.jpg"alt="карта" height="548" width="786">
+        <img  src="img/map.jpg"alt="карта">
         <button type="submit">Заблюдились? Напишите нам!</button>
       </div>
     </section>
   </section>
   </main>
-  <footer class="footer1">
+  <footer class="footer-1">
 <section>
   <h3>Контакты</h3>
   <div>
@@ -312,7 +317,7 @@
         <li><a href="Special.html">Спецпредложения</a></li>
       </ul>
     </section>
-    <section>
+    <section class="footer-2">
         <h2>Обратная связь</h2>
         <p>
           2010-2019 Компания "Техномарт"<br>
@@ -363,7 +368,7 @@
   <section>
     <h2 class="visually-hidden">Карта</h2>
     <p>
-      <img src="img/map.jpg" width="786" height="548" alt="Офис компании по адресу г.Санкт-Петербург, б.Конюшенная, д. 19/8">
+      <img src="img/map@3x.jpg" width="786" height="548" alt="Офис компании по адресу г.Санкт-Петербург, б.Конюшенная, д. 19/8">
     </p>
     <button type="button">закрыть</button>
   </section>
